--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		</p>
 		<p>
 			<hr>
+			<!-- Ask for page viewer's comments -->
 			<form>
 				<label for="name">Name: </label>
 				<input type="text" name="name" id="name" placeholder="Write your name"><br><br>
