--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 		<title>Jose Ortiz</title>
 	</head>
 	<body>
+		<!-- Brief description of who you are -->
 		<h1>Jose Ortiz</h1>
 		<p><strong>Lecturer in the University of Auckland</strong></p>
+		
+		<!--  A deeper description of yourself -->		
 		<h2>About Me</h2>
 		<p>
 			Hi, I am currently working as a lecturer in the Business School, <a href="https://www.auckland.ac.nz/en.html">University of Auckland</a>.
@@ -18,9 +21,10 @@
 			</ul>
 			<img src="images/me.jpg" width="200" height="200">
 		</p>
+
+		<!-- A form asking for page viewer's comments comments -->		
 		<p>
 			<hr>
-			<!-- Ask for page viewer's comments -->
 			<form>
 				<label for="name">Name: </label>
 				<input type="text" name="name" id="name" placeholder="Write your name"><br><br>
